<resources>
    <!-- App name -->
    <string name="app_name">Agrolytics</string>

    <!-- General -->
    <string name="unexpected_error">Váratlan hiba történt, próbálja meg újraindítani az alkalmazást</string>
    <string name="error_retry">Hiba történt, próbáld újra</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="cancel">Mégse</string>
    <string name="exit">Kilépés</string>
    <string name="meter" translatable="false">m</string>
    <string name="cubic_meter" translatable="false">m³</string>
    <string name="error">Hiba</string>
    <string name="ok">Ok</string>

    <!-- Login -->
    <string name="no_internet">Nincs internetkapcsolat</string>
    <string name="auth_failed">Hibás email cím vagy jelszó</string>
    <string name="licence_expired">A felhasználóhoz tartozó licensz lejárt, kérjük vegye fel velünk a kapcsolatot</string>
    <string name="write_email_password">Írja be a felhasználónevet és jelszót</string>
    <string name="unexpected_login_error">Váratlan hiba történt a bejelentkezés során</string>
    <string name="succesful_login">Sikeres bejelentkezés</string>
    <string name="hint_email" translatable="false">E-mail</string>
    <string name="hint_password">Jelszó</string>
    <string name="btn_login">Bejelentkezés</string>
    <string name="logout">Kijelentkezés</string>


    <!-- Main -->
    <string name="permission_error">Az alkalmazás nem használható engedélyek nélkül</string>
    <string name="gps_off_message">GPS nélkül az alkalmazás nem fog lokációt menteni méréskor</string>
    <string name="internet">Internet</string>
    <string name="gps" translatable="false">GPS</string>
    <string name="latest_measurement">Legutóbbi mérés</string>
    <string name="no_available_measurement">Nincs megjeleníthető mérés</string>
    <string name="show_full_session">Teljes csoport megjelenítése</string>
    <string name="menu">Menü</string>
    <string name="parameters">Paraméterek</string>
    <string name="measurements">Mérések</string>
    <string name="map">Térkép</string>

    <!-- Measurement -->
    <string name="crop">Kivágás</string>
    <string name="image_saved">A kép mentésre került</string>
    <string name="select_area">Jelöljön ki megfelelő területet a képen</string>
    <string name="upload_delete_error">Feltöltés alatt lévő kép nem törölhető</string>
    <string name="done">Kész</string>
    <string name="more_declined">Nem megfelelő kijelölés. A képet kitöröltük a telefonról.</string>
    <string name="length_of_rod">Írd be a rúd méretét. (m)</string>
    <string name="length_of_wood">Írd be a farakás hosszát. (m)</string>
    <string name="is_fill_correct_message">Helyes a képen látható kijelölés?</string>
    <string name="logs_volume">a farakás térfogata</string>
    <string name="show_session_broken">Méréscsoport\náttekintése</string>
    <string name="finish_session">Befejezés</string>
    <string name="new_image">Új kép</string>
    <string name="manual_adaption">Manuális módosítás</string>
    <string name="volume_to_add">Hozzáadandó térfogatmennyiség</string>
    <string name="justification">Indoklás</string>
    <string name="manual_adaption_warning">Írd be a hozzáadandó térfogatot és az indoklást!</string>
    <string name="saved">Mentve</string>
    <string name="confirmation">Megerősítés</string>
    <string name="inaccurate_measurement">Pontatlan mérés</string>
    <string name="show_session">Munkament áttekintése</string>
    <string name="save_for_online">Mentés online feldolgozásra</string>
    <string name="confirm_delete">Biztosan törölni szeretnéd ezt az elemet?</string>
    <string name="volume">Térfogat</string>
    <string name="length">Hossz</string>
    <string name="species">Faj</string>
    <string name="date">Dátum</string>
    <string name="correction">Korrekció</string>
    <string name="no_internet_how_to_proceed">Nem megfelelő az internetkapcsolat. Hogyan szeretné folytatni?</string>
    <string name="select_species">Válassza ki a fa fajtáját</string>
    <string name="process">Feldolgozás</string>
    <string name="state">Állapot</string>
    <string name="varies">Változó</string>
    <string name="not_done">Nincs kész</string>
    <string name="save_image_for_later">Kép mentése későbbi feldolgozásra</string>
    <string name="measure_offline">Offline mérés</string>
    <string name="select_image">Kép választása</string>
    <string name="camera">Kamera</string>
    <string name="browse">Tallózás</string>
    <string name="quit_confirm">Biztosan ki szeretne lépni mentés nélkül? %d újonnan hozzáadott kép törlésre kerül.</string>
    <string name="unprocessed_warning">A méréscsoport tartalmaz még nem feldolgozott elemeket. A legutóbb hozzáadott mérések
        feltöltése akkor kezdődik meg, ha a csoportban minden mérés fel lett dolgozva.</string>
    <string name="empty_session">A méréscsoport nem tartalmaz elemeket.</string>
    <string name="item_state_being_uploaded">Feltöltés alatt</string>
    <string name="item_state_ready_to_upload">Feltöltésre kész</string>
    <string name="item_state_uploaded">Feltöltve</string>
    <string name="item_state_waiting_for_processing">Feldolgozásra vár</string>
    <string name="item_state_being_deleted">Törlés alatt</string>
    <string name="processing_cancelled">Feldolgozás megszakítva</string>

    <!-- Information -->
    <string name="impressum">Impresszum</string>
    <string name="information">Információ</string>
    <string name="information_contact">Információk, kapcsolat</string>
    <string name="company_name">Cégnév</string>
    <string name="agrolytics_kft" translatable="false">Agrolytics Kft.</string>
    <string name="email_address">E-mail cím</string>
    <string name="contact_email_address" translatable="false">contact@agrolytics.hu</string>
    <string name="phone_number">Telefonszám</string>
    <string name="contact_phone_number" translatable="false">+36 30 612 2653</string>
    <string name="web">Web</string>
    <string name="web_url" translatable="false">www.agrolytics.hu</string>

    <!-- Guide -->
    <string name="guide_text">
        A mérés pontosságát növelheti, ha fényképezés során ügyelünk a képi torzításokból adodó hatások minimalizálására.
        Ennek érdekében a következőkre érdemes odafigyelni: \n \n
        \u0009 &#8226; A sarang szemből legyen fotózva\n
        \u0009 &#8226; Fénnyel szembe, vagy rossz látási viszonyok mellett ne fotózzunk\n
        \u0009 &#8226; Referencia objektumként lehetőleg méterrudat használjunk\n
        \u0009 &#8226; A készített fotón a kijelölt rész a lehető legkisebb legyen (csak a sarangot tartalmazza)\n
        \u0009 &#8226; Ügyeljünk a méterrúd pontos kijelölésére\n
    </string>
    <string name="guide">Útmutató</string>
    <string name="guide_for_accuracy">Tanácsok a mérés pontosságának növeléséhez</string>


    <string name="toolbar_images">Méréscsoportok</string>

    <!-- Map -->
    <string name="toolbar_map">Térkép</string>
    <string name="images_without_coordinates">Koordináta nélküli képek: %d</string>

    <!-- Profile -->
    <string name="profile">Profil</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="forestry">Erdészet</string>
    <string name="licence_expiration">Licenc érvényessége</string>
    <string name="change_password">Jelszó megváltoztatása</string>
    <string name="current_password">Jelenlegi jelszó</string>
    <string name="new_password">Új jelszó</string>
    <string name="new_password_again">Új jelszó mégegyszer</string>
    <string name="change_language">Nyelv megváltoztatása</string>
    <string name="english" translatable="false">English</string>
    <string name="hungarian" translatable="false">Magyar</string>
    <string name="russian" translatable="false">русский</string>

</resources>
