<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin ="24dp"
        android:hint="@string/current_password"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin = "24dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/et_new_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin = "24dp"
        android:hint="@string/new_password_again"
        android:inputType="textPassword"/>

</LinearLayout>