<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="15dp" />
        <TextView
            android:id="@+id/btn_russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/russian"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="15dp"/>
        <TextView
            android:id="@+id/btn_hungarian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hungarian"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="15dp"/>

    </LinearLayout>

</ScrollView>