<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_round"
    android:elevation="2dp">

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_new"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/inaccurate_measurement" />

        <Button
            android:id="@+id/btn_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_result"
            app:layout_constraintBottom_toTopOf="@id/btn_show_session"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_dialog_button_clickable"
            android:text="@string/new_image"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/darkGrey"/>

        <Button
            android:id="@+id/btn_show_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_new"
            app:layout_constraintBottom_toTopOf="@id/btn_save_for_later"
            android:background="@drawable/bg_dialog_button_clickable"
            android:text="@string/show_session"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/darkGrey"
            android:backgroundTint="@color/yellow"/>

        <Button
            android:id="@+id/btn_save_for_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_show_session"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_dialog_button_clickable"
            android:text="@string/save_for_online"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/darkGrey"
            android:backgroundTint="@color/yellow"/>

</androidx.constraintlayout.widget.ConstraintLayout>