<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_round"
    android:elevation="2dp">

    <TextView
        app:fontFamily="@font/roboto"
        android:id="@+id/tv_correction"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/is_fill_correct_message"
        android:textColor="@color/darkGrey"
        android:textSize="20sp"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/roboto_bold"
        android:id="@+id/btn_accept"
        android:text="@string/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_correction"
        android:layout_alignEnd="@+id/tv_correction"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:textSize="20sp"
        android:textColor="@color/darkGrey"
        android:padding="15dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="@id/tv_correction"
        app:layout_constraintTop_toBottomOf="@id/tv_correction"/>

    <TextView
        android:fontFamily="@font/roboto_bold"
        android:id="@+id/btn_decline"
        android:text="@string/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_correction"
        android:layout_alignStart="@+id/tv_correction"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/darkGrey"
        android:padding="15dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="@id/tv_correction"
        app:layout_constraintTop_toBottomOf="@id/tv_correction"/>

</androidx.constraintlayout.widget.ConstraintLayout>