<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/roundedImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="4dp"
            android:layout_margin="5dp"
            android:elevation="0dp">
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/length_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/roundedImageView"
            app:layout_constraintStart_toStartOf="@id/roundedImageView"
            android:layout_marginTop="5dp"
            android:text="@string/length"/>
        <TextView
            android:id="@+id/wood_type_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/length_text"
            app:layout_constraintStart_toStartOf="@id/roundedImageView"
            android:layout_marginTop="5dp"
            android:text="@string/species"/>
        <TextView
            android:id="@+id/wood_volume_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wood_type_text"
            app:layout_constraintStart_toStartOf="@id/roundedImageView"
            android:layout_marginTop="5dp"
            android:text="@string/volume"/>
        <TextView
            android:id="@+id/date_value"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wood_volume_text"
            app:layout_constraintStart_toStartOf="@id/roundedImageView"
            android:layout_marginTop="5dp"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/length_value"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/roundedImageView"
            app:layout_constraintEnd_toEndOf="@id/roundedImageView"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/wood_type_value"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/length_text"
            app:layout_constraintEnd_toEndOf="@id/roundedImageView"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/wood_volume_value"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wood_type_text"
            app:layout_constraintEnd_toEndOf="@id/roundedImageView"
            android:layout_margin="5dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>