<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_response_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        tools:src="@color/colorPrimary" />

    <RelativeLayout
        android:id="@+id/container_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_response_image"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/tv_correction"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/is_fill_correct_message"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:fontFamily="sans-serif-medium" />

        <ImageView
            android:id="@+id/btn_accept"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/tv_correction"
            android:layout_alignEnd="@+id/tv_correction"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_round_correct"
            app:backgroundTint="@color/negativeButtonColor" />

        <ImageView
            android:id="@+id/btn_decline"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/tv_correction"
            android:layout_alignStart="@+id/tv_correction"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_round_cancel"
            app:backgroundTint="@color/negativeButtonColor" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_after_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_response_image"
        android:layout_marginTop="24dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="38sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            tools:text="5000.05 m3" />

        <TextView
            android:id="@+id/tv_sum"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_result"
            android:layout_centerHorizontal="true"
            android:text="@string/logs_volume"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:fontFamily="sans-serif-medium" />

        <Button
            android:id="@+id/btn_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sum"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:padding="12dp"
            android:text="@string/create_new_button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@android:color/white"
            tools:visibility="visible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_declined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_response_image"
        android:layout_marginTop="24dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            android:text="@string/more_declined" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:rotation="180"
        android:src="@drawable/ic_arrow_back"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_arrow_back"
        android:visibility="gone"/>

</RelativeLayout>